SGTRR-454 Landing: The user doesn't see border on Email field on IE: Fixed. Added padding left on placeholder

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -2692,6 +2692,11 @@ input::-ms-clear {
 .navbar-default .navbar-toggle:focus {
     background-color: inherit;
 }
+
 .static {
     position: static;
+}
+
+.footer-cover .custom-placeholder {
+    left: 5px;
 }
